--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express-list-endpoints": "^6.0.0",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.4.4"
+    "mongoose": "^6.4.4",
+    "socket.io": "^4.5.1"
   },
   "devDependencies": {
     "dotenv": "^16.0.1",
